force-app/main/default/objects/ACC_News__c/ACC_News__c.object-meta.xml
<CustomObject>
    <label>Account News</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{00000}</displayFormat>
        <label>Account News Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>