force-app/main/default/objects/ACC_News__c/fields/Account_lk__c.field-meta.xml
<CustomField>
    <fullName>Account_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account News</relationshipLabel>
    <relationshipName>AccountNews</relationshipName>
    <type>Lookup</type>
</CustomField>