force-app/main/default/objects/ACC_News__c/fields/DescriptionOriginal__c.field-meta.xml
<CustomField>
    <fullName>DescriptionOriginal__c</fullName>
    <label>Description Original</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>