force-app/main/default/objects/ACC_News__c/fields/NewsKey__c.field-meta.xml
<CustomField>
    <fullName>NewsKey__c</fullName>
    <externalId>true</externalId>
    <label>News Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>