force-app/main/default/objects/ACC_News__c/fields/OriginalLink__c.field-meta.xml
<CustomField>
    <fullName>OriginalLink__c</fullName>
    <label>Original Link</label>
    <type>Url</type>
</CustomField>