force-app/main/default/objects/ACC_News__c/fields/PubDate__c.field-meta.xml
<CustomField>
    <fullName>PubDate__c</fullName>
    <label>Pub Date</label>
    <type>DateTime</type>
</CustomField>