force-app/main/default/objects/ACC_News__c/fields/TitleOriginal__c.field-meta.xml
<CustomField>
    <fullName>TitleOriginal__c</fullName>
    <label>Title Original</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>